- FIX: source and javadoc attachment regression (IVYDE-146)
- FIX: IvyDE does not save "Configurations" and "Types" field values for "Retrive" tab  (IVYDE-142) (thanks to Daniel Becheanu)
- FIX: Retrieve after resolve task fails because of wrong resolve configuration (IVYDE-140) (thanks to Daniel Becheanu)

  version 2.0.0 beta1
==========================
- NEW: settings files code completion support (IVYDE-22)
- NEW: Option to resolve to local eclipse projects (IVYDE-89) (thanks to Antony James Wilkins and Matt Goldspink)
- NEW: Add errors marker to the Ivy container (IVYDE-78)
- NEW: Handle a project: scheme for the path of the ivysettings.xml (IVYDE-94)
- NEW: Need CleanCache task in context menu (IVYDE-114)
- NEW: Retrieve after resolve feature does not fetch only accepted jar types artifact (IVYDE-106)

- IMPROVE: Split the configuration panel (IVYDE-119)
- IMPROVE: Support latest dev version of ivy.jar in IVYDE build (IVYDE-122)
- IMPROVE: IVYDE classpath container should support bundle types by default (IVYDE-121)
- IMPROVE: Set current working dir to eclipse project location (IVYDE-52)
- IMPROVE: Make the classpath entries order configuration UI more intuitive (IVYDE-104)
- IMPROVE: Retrieve after resolve feature does not clean target directory first (IVYDE-105)

- FIX: IvyDE IvyPreferencePage does not work with eclipse 3.2 (IVYDE-120)
- FIX: Can't close ivy console in eclipse (IVYDE-123)
- FIX: IvyDE does not do property value expansion (IVYDE-90)
- FIX: Resolve in workspace does not pick up all projects in workspace (IVYDE-118) (thanks to Matt Goldspink)
- FIX: Ivy editor: code completion missing for matcher attribute of conflicts manager (IVYDE-99)
- FIX: The project dependencies and the errors markers are conflicting (IVYDE-116) 
- FIX: same jar files get downloaded 3 times (binary, javadoc and sources jar files are identical) (IVYDE-117)
- FIX: IvyDE crashes during resolve due to an incompatibility with Eclipse 3.2 (IVYDE-108)